# discord_selfbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  example.config.ron  example.env  restart.cmd  restart_rebuild.cmd  update_restart.cmd
src/: config.rs  helpers.rs  key_value_args_utils.rs  main.rs  media.rs  os_command.rs  types.rs
src/commands/: age.rs  bible.rs  cobalt.rs  crates.rs  embed.rs  escape.rs  favoritize.rs  ffmpeg.rs  fix.rs  flip.rs  github.rs  help.rs  jxl.rs  mod.rs  now_playing.rs  ocr.rs  roll.rs  screenshot.rs  snowstamp.rs  song_info.rs  timestamp.rs  translate.rs  unicode.rs  uptime.rs  utilities.rs  wayback.rs  webp.rs  wolfram.rs  youtube.rs
src/commands/playground/: microbench.rs  misc_commands.rs  play_eval.rs  util.rs
src/commands/rust_playground/: api.rs  mod.rs  play_eval.rs  procmacro.rs  util.rs
