[package]
name = "discord_selfbot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "db0d6aa", features = [
   "macros",
] }
log = "0.4.22"
maplit = "1.0.2"
poise = { git = "https://github.com/serenity-rs/poise", ref = "22b5b01" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_plain = "1.0.2"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
url = "2.5.2"
anyhow = "1.0.89"
byte-unit = "5.1.4"
tempfile = "3.13.0"
urlencoding = "2.1.3"
caith = { git = "https://github.com/Kyza/caith.git", rev = "a05c6a" }
chrono = "0.4.38"
heck = "0.5.0"
indexmap = "2.6.0"
