[package]
name = "discord_selfbot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
poise = { git = "https://github.com/serenity-rs/poise", rev = "22b5b01" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_plain = "1.0.2"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
url = "2.5.2"
anyhow = "1.0.89"
byte-unit = "5.1.4"
tempfile = "3.13.0"
urlencoding = "2.1.3"
caith = { git = "https://github.com/Kyza/caith.git", rev = "a05c6a" }
chrono = "0.4.38"
heck = "0.5.0"
indexmap = "2.6.0"
rand = "0.8.5"
tracing = "0.1.40"
syn = { version = "2.0.89", features = ["full"] }
regex = "1.11.1"
inline_format = "0.2.3"
rusty-tesseract = "1.1.10"
image = "0.25.5"
strip_markdown = "0.2.0"
thirtyfour = "0.35.0"
fancy-regex = "0.14.0"
ron = "0.8.1"
# kalosm = { version = "0.3.2", features = ["vision", "cuda"] }
# ort-sys = "=2.0.0-rc.8"
# image = "0.24.7"
# cudarc = { version = "=0.12.1", features = ["cuda-version-from-build-system"] }
